unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Additional_items_charge_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Additional_items_charge_formula__c</fullName>
    <formula>IF( ISBLANK( Material_charge__c ) ,&quot;&quot;, &#39;£&#39; &amp; TEXT( Material_charge__c ) &amp;BR () &amp;BR () )&amp;
&#39;£&#39;&amp; TEXT(Fixed_total_charge_excl_VAT__c) &amp;BR () &amp;
&#39;£&#39;&amp; TEXT(VAT__c )</formula>
    <label>NEW Additional items charge formula</label>
    <type>Text</type>
</CustomField>