unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Additional_items_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Additional_items_formula__c</fullName>
    <formula>IF( ISBLANK(  Material_charge__c ) ,&quot;&quot;, &quot;Materials&quot;&amp;BR() &amp;BR())&amp;
&quot;Subtotal&quot; &amp;BR()&amp;
&quot;VAT&quot;</formula>
    <label>NEW Additional items formula</label>
    <type>Text</type>
</CustomField>