unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Grand_total_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Grand_total_formula__c</fullName>
    <formula>&#39;£&#39; &amp; TEXT(Fixed_total_charge_incl_VAT__c )</formula>
    <label>NEW Grand total formula</label>
    <type>Text</type>
</CustomField>