unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_charge_totals_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_charge_totals_formula__c</fullName>
    <formula>IF( ISBLANK(  Discount_offered__c ) ,&quot;&quot;, &#39;£&#39; &amp; TEXT( (Labour_charge__c + Fixed_price_charge__c) )&amp;BR() )&amp;
IF( ISBLANK(  Discount_offered__c ) ,&quot;&quot;, &#39;- £&#39; &amp; TEXT(Discount_offered__c )&amp;BR() )</formula>
    <label>NEW Labour charge totals formula</label>
    <type>Text</type>
</CustomField>