unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_item_totals_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_item_totals_formula__c</fullName>
    <formula>IF( ISBLANK( Discount_offered__c  ) ,&quot;&quot;, &quot;Labour subtotal&quot; &amp;BR() )&amp;
IF( ISBLANK( Discount_offered__c  ) ,&quot;&quot;, &quot;Discount&quot; &amp;BR() )</formula>
    <label>NEW Labour item totals formula</label>
    <type>Text</type>
</CustomField>