unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_items_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_items_formula__c</fullName>
    <formula>IF( ISBLANK( Hours_of_work_completed_timeslot_1__c ) ,&quot;&quot;, Tradesperson_1__c &amp; &#39; at &#39; &amp; &#39;£&#39; &amp; TEXT(Hourly_rate_timeslot_1__c) &amp;BR() )&amp;
IF( ISBLANK( Hours_of_work_completed_timeslot_2__c ) ,&quot;&quot;, Tradesperson_1__c &amp; &#39; at &#39; &amp; &#39;£&#39; &amp; TEXT(Hourly_rate_timeslot_2__c) &amp;BR() )&amp;
IF( ISBLANK(Fixed_price_charge__c ) ,&quot;&quot;,  Fixed_price_service_details__c  &amp;BR() )</formula>
    <label>NEW Labour items formula</label>
    <type>Text</type>
</CustomField>