unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_quantity_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_quantity_formula__c</fullName>
    <formula>IF( ISBLANK( Hours_of_work_completed_timeslot_1__c ) ,&quot;&quot;, TEXT(Hours_of_work_completed_timeslot_1__c) &amp; &#39; hours &#39; &amp;BR() ) &amp;
IF( ISBLANK( Hours_of_work_completed_timeslot_2__c ) ,&quot;&quot;, TEXT(Hours_of_work_completed_timeslot_2__c) &amp; &#39; hours &#39; &amp;BR() )&amp;
IF( ISNULL( Fixed_price_charge__c ) ,&quot;&quot;, &#39; 1 &#39; &amp;BR() )</formula>
    <label>NEW Labour quantity formula</label>
    <type>Text</type>
</CustomField>