unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_quantity_totals_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_quantity_totals_formula__c</fullName>
    <formula>IF( ISBLANK( Discount_offered__c ) ,&quot;&quot;, BR() )&amp;
IF( ISBLANK( Discount_offered__c ) ,&quot;&quot;, Discount__c )</formula>
    <label>NEW Labour quantity totals formula</label>
    <type>Text</type>
</CustomField>