unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Labour_total_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Labour_total_formula__c</fullName>
    <formula>&#39;£&#39; &amp;TEXT((Labour_charge__c + Fixed_price_charge__c) - Discount_offered__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NEW Labour total formula</label>
    <type>Text</type>
</CustomField>