unpackaged/main/default/objects/Visit_completion_report__c/fields/NEW_Payment_balance_formula__c.field-meta.xml
<CustomField>
    <fullName>NEW_Payment_balance_formula__c</fullName>
    <formula>&quot;Received&quot; &amp;BR()&amp;
IF( ISNULL(Payment_received__c), &quot;£0&quot;, &quot;£&quot; &amp; TEXT(Payment_received__c) ) &amp;BR()&amp;
&quot;Outstanding&quot; &amp;BR()&amp;
IF( ISNULL(Outstanding_Balance__c), &quot;£0&quot;, &quot;£&quot; &amp; TEXT(Outstanding_Balance__c) ) &amp;BR()</formula>
    <label>NEW Payment balance formula</label>
    <type>Text</type>
</CustomField>