unpackaged/main/default/objects/Visit_completion_report__c/fields/Office_Notes__c.field-meta.xml
<CustomField>
    <fullName>Office_Notes__c</fullName>
    <label>Office Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>