unpackaged/main/default/objects/Visit_completion_report__c/fields/ON_SITE_TIMES_CHARGED_CORRECTLY__c.field-meta.xml
<CustomField>
    <fullName>ON_SITE_TIMES_CHARGED_CORRECTLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ON SITE TIMES CHARGED CORRECTLY</label>
    <type>Checkbox</type>
</CustomField>