unpackaged/main/default/objects/Visit_completion_report__c/fields/Online_Booking_record__c.field-meta.xml
<CustomField>
    <fullName>Online_Booking_record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Online Booking record</label>
    <referenceTo>Online_Bookings__c</referenceTo>
    <relationshipLabel>Visit completion reports</relationshipLabel>
    <relationshipName>Visit_completion_reports</relationshipName>
    <type>Lookup</type>
</CustomField>