unpackaged/main/default/objects/Visit_completion_report__c/fields/Operative_Collection__c.field-meta.xml
<CustomField>
    <fullName>Operative_Collection__c</fullName>
    <defaultValue>&quot;Collected&quot;</defaultValue>
    <description>Did the Operative collect the outstanding balance from the Customer or did the Office have to contact the Customer (Not Collected)</description>
    <label>Operative Collection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collected</fullName>
                <default>true</default>
                <label>Collected</label>
            </value>
            <value>
                <fullName>Not Collected</fullName>
            </value>
            <value>
                <fullName>No VCR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>