unpackaged/main/default/objects/Visit_completion_report__c/fields/Operative_email__c.field-meta.xml
<CustomField>
    <fullName>Operative_email__c</fullName>
    <label>Operative email</label>
    <type>Email</type>
</CustomField>