unpackaged/main/default/objects/Visit_completion_report__c/fields/OPERATIVE_INCORRECT_INPUT_2__c.field-meta.xml
<CustomField>
    <fullName>OPERATIVE_INCORRECT_INPUT_2__c</fullName>
    <label>OPERATIVE INCORRECT INPUT 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>