unpackaged/main/default/objects/Visit_completion_report__c/fields/Operative_name__c.field-meta.xml
<CustomField>
    <fullName>Operative_name__c</fullName>
    <label>Operative name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>