unpackaged/main/default/objects/Visit_completion_report__c/fields/Operative_who_Carried_out_initial_Work__c.field-meta.xml
<CustomField>
    <fullName>Operative_who_Carried_out_initial_Work__c</fullName>
    <label>Operative who Carried out initial Work</label>
    <length>255</length>
    <type>Text</type>
</CustomField>