unpackaged/main/default/objects/Visit_completion_report__c/fields/Organic_Review__c.field-meta.xml
<CustomField>
    <fullName>Organic_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Was this an organic review - i.e. the Customer decided to give it of their own volition</description>
    <inlineHelpText>Was this an organic review - i.e. the Customer decided to give it of their own volition</inlineHelpText>
    <label>Organic Review?</label>
    <type>Checkbox</type>
</CustomField>