unpackaged/main/default/objects/Visit_completion_report__c/fields/Other_Services_Required__c.field-meta.xml
<CustomField>
    <fullName>Other_Services_Required__c</fullName>
    <label>Other Services Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>