unpackaged/main/default/objects/Visit_completion_report__c/fields/Outstanding_Balance__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance__c</fullName>
    <description>Fixed Total Charge incl. VAT minus Payment Received</description>
    <formula>Fixed_total_charge_incl_VAT__c- BLANKVALUE(Payment_received__c, 0)</formula>
    <inlineHelpText>Fixed Total Charge incl. VAT minus Payment Received</inlineHelpText>
    <label>Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>