unpackaged/main/default/objects/Visit_completion_report__c/fields/Passed_to_Credit_Control__c.field-meta.xml
<CustomField>
    <fullName>Passed_to_Credit_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this VCR been passed to Credit Control for Collection?</description>
    <inlineHelpText>Has this VCR been passed to Credit Control for Collection?</inlineHelpText>
    <label>Passed to Credit Control?</label>
    <type>Checkbox</type>
</CustomField>