unpackaged/main/default/objects/Visit_completion_report__c/fields/Payment_Made_By__c.field-meta.xml
<CustomField>
    <fullName>Payment_Made_By__c</fullName>
    <label>Payment Made By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Made_By</valueSetName>
    </valueSet>
</CustomField>