unpackaged/main/default/objects/Visit_completion_report__c/fields/Payment_received__c.field-meta.xml
<CustomField>
    <fullName>Payment_received__c</fullName>
    <label>Payment received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>