unpackaged/main/default/objects/Visit_completion_report__c/fields/Payment_Reconciled__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reconciled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Reconciled</label>
    <type>Checkbox</type>
</CustomField>