unpackaged/main/default/objects/Visit_completion_report__c/fields/Payment_Siclops_Reference__c.field-meta.xml
<CustomField>
    <fullName>Payment_Siclops_Reference__c</fullName>
    <label>Payment Siclops Reference</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>