unpackaged/main/default/objects/Visit_completion_report__c/fields/Payment_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;,
&quot;https://aspect.co.uk/forms/outstanding-balance/&quot;,
&quot;https://aspect.co.uk.hyv.gotest.it/forms/outstanding-balance/&quot;)
&amp;&quot;?cli=&quot;&amp; Customer_first_name__c &amp;&quot;%20&quot;&amp;Customer_last_name__c
&amp;&quot;&amp;ref=&quot; &amp;TEXT(Visit_Completion_Report_Number__c)
&amp;&quot;&amp;id=&quot;&amp; Id
&amp;&quot;&amp;cem=&quot;&amp; Customer_email__c
&amp;

&quot;&amp;a=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c),8)) &amp;
&quot;&amp;b=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c/8),8)) &amp;
&quot;&amp;c=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c/(8*8)),8)) &amp;
&quot;&amp;d=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c/(8*8*8)),8)) &amp;
&quot;&amp;e=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c/(8*8*8*8)),8)) &amp;
&quot;&amp;f=&quot;&amp; TEXT(MOD( FLOOR(Fixed_total_charge_incl_VAT__c/(8*8*8*8*8)),8)) &amp;

&quot;&amp;x=&quot;&amp; TEXT(MOD( MOD(Fixed_total_charge_incl_VAT__c,1)*100,8)) &amp;
&quot;&amp;y=&quot;&amp; TEXT(MOD( FLOOR(MOD(Fixed_total_charge_incl_VAT__c,1)*100/8),8)) &amp;
&quot;&amp;z=&quot;&amp; TEXT(MOD( FLOOR(MOD(Fixed_total_charge_incl_VAT__c,1)*100/(8*8)),8))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment URL</label>
    <type>Text</type>
</CustomField>