unpackaged/main/default/objects/Visit_completion_report__c/fields/Power_of_1_Currency__c.field-meta.xml
<CustomField>
    <fullName>Power_of_1_Currency__c</fullName>
    <description>For reporting purposes only</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For reporting purposes only</inlineHelpText>
    <label>Power of 1 Currency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>