unpackaged/main/default/objects/Visit_completion_report__c/fields/Property_address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Property_address_line_2__c</fullName>
    <label>Property address line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>