unpackaged/main/default/objects/Visit_completion_report__c/fields/QC_Notes__c.field-meta.xml
<CustomField>
    <fullName>QC_Notes__c</fullName>
    <label>QC Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>