unpackaged/main/default/objects/Visit_completion_report__c/fields/Recommendation_for_further_work__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_for_further_work__c</fullName>
    <label>Recommendation for further work</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>