unpackaged/main/default/objects/Visit_completion_report__c/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <label>Refund</label>
    <type>TextArea</type>
</CustomField>