unpackaged/main/default/objects/Visit_completion_report__c/fields/Review_Left_Online__c.field-meta.xml
<CustomField>
    <fullName>Review_Left_Online__c</fullName>
    <label>Review Left Online?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Left_Online</valueSetName>
    </valueSet>
</CustomField>