unpackaged/main/default/objects/Visit_completion_report__c/fields/Review_Obtained_by_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Review_Obtained_by_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Obtained by Engineer</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Visit completion reports (Review Obtained by Engineer)</relationshipLabel>
    <relationshipName>Visit_completion_reports_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>