unpackaged/main/default/objects/Visit_completion_report__c/fields/Review_Obtained_by_Office__c.field-meta.xml
<CustomField>
    <fullName>Review_Obtained_by_Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Review Obtained by Office</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports_Office_Review</relationshipName>
    <type>Lookup</type>
</CustomField>