unpackaged/main/default/objects/Visit_completion_report__c/fields/Review_Rating__c.field-meta.xml
<CustomField>
    <fullName>Review_Rating__c</fullName>
    <label>Review Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Review_Rating</valueSetName>
    </valueSet>
</CustomField>