unpackaged/main/default/objects/Visit_completion_report__c/fields/Second_timeslot__c.field-meta.xml
<CustomField>
    <fullName>Second_timeslot__c</fullName>
    <label>Second timeslot</label>
    <length>255</length>
    <type>Text</type>
</CustomField>