unpackaged/main/default/objects/Visit_completion_report__c/fields/Signature_customer__c.field-meta.xml
<CustomField>
    <fullName>Signature_customer__c</fullName>
    <label>Signature customer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>