unpackaged/main/default/objects/Visit_completion_report__c/fields/Signature_customer_link__c.field-meta.xml
<CustomField>
    <fullName>Signature_customer_link__c</fullName>
    <formula>IF($Organization.Id = &#39;00D3H0000000ivA&#39;, &quot;https://aspect.co.uk/&quot;, &quot;https://aspect.co.uk.hyv.gotest.it/&quot;)&amp;
&quot;?page=gf_signature&amp;signature=&quot;&amp;SUBSTITUTE( Signature_customer__c , &quot;.png&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Signature customer link</label>
    <type>Text</type>
</CustomField>