unpackaged/main/default/objects/Visit_completion_report__c/fields/Signature_operative__c.field-meta.xml
<CustomField>
    <fullName>Signature_operative__c</fullName>
    <label>Signature operative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>