unpackaged/main/default/objects/Visit_completion_report__c/fields/Survey_Quality__c.field-meta.xml
<CustomField>
    <fullName>Survey_Quality__c</fullName>
    <label>Survey Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Acceptable</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>