unpackaged/main/default/objects/Visit_completion_report__c/fields/Total_hours_completed__c.field-meta.xml
<CustomField>
    <fullName>Total_hours_completed__c</fullName>
    <label>Total hours completed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>