unpackaged/main/default/objects/Visit_completion_report__c/fields/Total_pay_O1_Capped__c.field-meta.xml
<CustomField>
    <fullName>Total_pay_O1_Capped__c</fullName>
    <formula>Fixed_price_pay_O1_Capped__c  +  Material_pay_O1__c +  Labour_pay_O1_Capped__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total pay O1 (Capped)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>