unpackaged/main/default/objects/Visit_completion_report__c/fields/Total_pay_O1_Capped_TESTING_ONLY__c.field-meta.xml
<CustomField>
    <fullName>Total_pay_O1_Capped_TESTING_ONLY__c</fullName>
    <formula>BLANKVALUE(Fixed_price_pay_O1_Capped_TESTING_ONLY__c, 0) + BLANKVALUE(Material_pay_O1__c,0) + BLANKVALUE(Labour_pay_O1_Capped_TESTING_ONLY__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total pay O1 (Capped) TESTING ONLY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>