unpackaged/main/default/objects/Visit_completion_report__c/fields/ULEZ_APPLIED_CORRECTLY__c.field-meta.xml
<CustomField>
    <fullName>ULEZ_APPLIED_CORRECTLY__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ULEZ APPLIED CORRECTLY</label>
    <type>Checkbox</type>
</CustomField>