unpackaged/main/default/objects/Visit_completion_report__c/fields/User_that_Ticked_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>User_that_Ticked_Invoiced__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User that Ticked Invoiced</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports1</relationshipName>
    <type>Lookup</type>
</CustomField>