unpackaged/main/default/objects/Visit_completion_report__c/fields/User_that_Ticked_Siclops_Stage_1__c.field-meta.xml
<CustomField>
    <fullName>User_that_Ticked_Siclops_Stage_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User that Ticked Siclops Stage 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports</relationshipName>
    <type>Lookup</type>
</CustomField>