unpackaged/main/default/objects/Visit_completion_report__c/fields/VCR_Final_Payment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>VCR_Final_Payment_Date_Time__c</fullName>
    <description>The Date/Time the Final Balance was taken.</description>
    <inlineHelpText>The Date/Time the Final Balance was taken.</inlineHelpText>
    <label>VCR Final Payment Date/Time</label>
    <type>DateTime</type>
</CustomField>