unpackaged/main/default/objects/Visit_completion_report__c/fields/Visit_Completion_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completion_Report_Number__c</fullName>
    <formula>VALUE(MID(Name,FIND(&#39;-&#39;, Name)+1,(LEN(Name)-FIND(&#39;-&#39;, Name))))</formula>
    <label>Visit Completion Report Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>