unpackaged/main/default/objects/Visit_completion_report__c/fields/Who_Set_Field_Support__c.field-meta.xml
<CustomField>
    <fullName>Who_Set_Field_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The User that changed the &#39;Field Support&#39; field from its default value of &#39;Not Required&#39;</description>
    <inlineHelpText>The User that changed the &#39;Field Support&#39; field from its default value of &#39;Not Required&#39;</inlineHelpText>
    <label>Who Set Field Support</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports5</relationshipName>
    <type>Lookup</type>
</CustomField>