unpackaged/main/default/objects/Visit_completion_report__c/fields/Who_Ticked_Complaint_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Who_Ticked_Complaint_Resolved__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Who Ticked Complaint Resolved</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Visit_completion_reports4</relationshipName>
    <type>Lookup</type>
</CustomField>