unpackaged/main/default/objects/Visit_completion_report__c/fields/Work_Completion_Image_1__c.field-meta.xml
<CustomField>
    <fullName>Work_Completion_Image_1__c</fullName>
    <label>Work Completion Image 1</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>