unpackaged/main/default/objects/Visit_completion_report__c/fields/Work_Documents_Image_2__c.field-meta.xml
<CustomField>
    <fullName>Work_Documents_Image_2__c</fullName>
    <label>Work Documents Image 2</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>