unpackaged/main/default/objects/Visit_completion_report__c/fields/Work_type__c.field-meta.xml
<CustomField>
    <fullName>Work_type__c</fullName>
    <label>Work type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>