unpackaged/main/default/objects/Visit_completion_report__c/fields/Worldpay_ID__c.field-meta.xml
<CustomField>
    <fullName>Worldpay_ID__c</fullName>
    <label>Worldpay ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>