unpackaged/main/default/objects/Visit_completion_report__c/fields/X1_if_Complaint_Raised_Ticked__c.field-meta.xml
<CustomField>
    <fullName>X1_if_Complaint_Raised_Ticked__c</fullName>
    <formula>IF( Complaint_Raised__c =TRUE,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 if Complaint Raised Ticked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>