unpackaged/main/default/objects/Visit_completion_report__c/validationRules/Siclops_Stage_1_Only_Check_Once.validationRule-meta.xml
<ValidationRule>
    <fullName>Siclops_Stage_1_Only_Check_Once</fullName>
    <active>true</active>
    <description>To ensure that once the field Siclops Stage 1 has been checked, it cannot be unchecked or checked again.</description>
    <errorConditionFormula>AND
(
PRIORVALUE(Siclops_Stage_1__c)=TRUE,
Siclops_Stage_1__c=FALSE
)</errorConditionFormula>
    <errorMessage>Once Siclops Stage 1 has been checked you cannot uncheck it.</errorMessage>
</ValidationRule>