unpackaged/main/default/objects/Visit_completion_report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Operative_email__c</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>Operative_Collection__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>