unpackaged/main/default/objects/Visit_completion_report__c/listViews/Building_F_Complete_Siclops_1_ticked.listView-meta.xml
<ListView>
    <fullName>Building_F_Complete_Siclops_1_ticked</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Work_type__c</columns>
    <columns>Siclops_Call_Ref__c</columns>
    <columns>Operative_name__c</columns>
    <columns>NAME</columns>
    <columns>Outcome__c</columns>
    <columns>Property_address_postcode__c</columns>
    <columns>Customer_first_name__c</columns>
    <columns>Customer_last_name__c</columns>
    <columns>Fixed_total_charge_excl_VAT__c</columns>
    <columns>Payment_Reconciled__c</columns>
    <columns>Siclops_Stage_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Work_type__c</field>
        <operation>contains</operation>
        <value>Roofing,Windows &amp; Doors,OSA-Electrical,Electrical,Handyman,Multi Trade,Waste Removal,Gardening,Ventilation</value>
    </filters>
    <filters>
        <field>Outcome__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <filters>
        <field>Siclops_Stage_1__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Building F - Complete - Siclops 1 ticked</label>
</ListView>